--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
 2025.11.14 我放入了2个鸡蛋
 2025.11.14 我放入了两个面包
 2025.11.14 我放进了7盒牛奶
-2025.11.14 我放入了2斤牛肉
+2025.11.14 我放入了1斤牛肉
+2025.11.15 我放进了5块豆腐
+2025.11.16 我放了4个西红柿
+2025.11.18 我放入了两瓶水
